--- a/index.html
+++ b/index.html
@@ -1,89 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<meta name="theme-color" content="#254cf5">
-		<title>console.chat</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/boxicons@1.7.1/css/boxicons.min.css" rel="stylesheet">
-		<style>
-			html, body {
-				margin: 0;
-				color: #000000;
-				background-color: #ffffff;
-				font-family: "Roboto Mono", monospace;
-				font-size: 18px;
-				-webkit-text-size-adjust: 100%;
-				-webkit-overflow-scrolling: touch;
-			}
-			a {
-				color: #000000;
-			}
-			header {
-				color: #ffffff;
-				background-color: #000000;
-				padding: 40px;
-			}
-			header a {
-				color: #ffffff;
-				text-decoration: none;
-			}
-			main {
-				margin: 40px;
-			}
-			.section {
-				margin-bottom: 40px;
-			}
-			.code {
-				color: #ffffff;
-				background-color: #000000;
-				padding: 40px;
-				display: inline-block;
-				border-radius: 2px;
-				font-family: "Roboto Mono", monospace;
-				width: 70%; 
-				overflow-x: scroll;
-				text-align: center;
-			}
-			.code code { 
-				white-space: pre; 
-			}
-			footer {
-				color: #ffffff;
-				background-color: #000000;
-				padding: 40px;
-			}
-			footer a {
-				color: #ffffff;
-			}
-		</style>
-	</head>
-	<body>
-		<header>
-    		<h1><a href="https://console.chat">console.chat</a></h1>
-    	</header>
-    	<main>
-    		<div class="section">
-    			<h2>What is this?</h2>
-				<p>You're going to think I'm crazy but it's exactly what it sounds like. A chat room inside your browser's console.</p>
-			</div>
-			<div class="section">
-    			<h2>No way!</h2>
-				<p>Yes way! Open your browser's JavaScript console right now to see a demo.</p>
-			</div>
-			<div class="section">
-    			<h2>Implementation</h2>
-				<p>Add this to your site's HTML on every page you want console.chat activated (no more steps required):</p>
-				<div class="code">
-					<code><b>&lt;script src="https://console.chat/load.js"&gt;&lt;/script&gt;</b></code>
-				</div>
-			</div>
-		</main>
-		<footer>
-			<p><a href="https://dalton.1mb.site" target="_blank">Dalton Edwards</a> – Copyright 2019</p>
-			<p><a href="https://github.com/DaltonWebDev/console.chat" target="_blank">Source Code</a> / <a href="https://www.buymeacoffee.com/DaltonEdwards" target="_blank">Support Me</a></p>
-		</footer>
-		<script src="https://console.chat/load.js"></script>
-	</body>
+  <head>
+    <script src="./cdn/load.js"></script>
+  </head>
 </html>
